--- a/UserManagement.UI/Components/UserAuditRow.razor
+++ b/UserManagement.UI/Components/UserAuditRow.razor
@@ -6,7 +6,7 @@
     <td>@AuditDto.LoggedAt</td>
     <td>@AuditDto.Action</td>
     <td>
-        <button class="btn btn-sm btn-primary" @onclick="() => OnViewAudit.InvokeAsync(AuditDto)">View</button>
+        <button class="btn btn-sm btn-primary" @onclick="() => OnViewAudit.InvokeAsync(AuditDto)">Details</button>
     </td>
 </tr>
 
