Refactor to allow Forenames, Surnames, Emails in UserAudit

--- a/UserManagement.UI/Components/UserAuditRow.razor
+++ b/UserManagement.UI/Components/UserAuditRow.razor
@@ -3,6 +3,9 @@
 <tr>
     <td>@AuditDto.Id</td>
     <td>@AuditDto.UserId</td>
+    <td>@AuditDto.UserForename</td>
+    <td>@AuditDto.UserSurname</td>
+    <td>@AuditDto.UserEmail</td>
     <td>@AuditDto.LoggedAt</td>
     <td>@AuditDto.Action</td>
     <td>
