--- a/UserManagement.UI/Pages/AuditsList.razor
+++ b/UserManagement.UI/Pages/AuditsList.razor
@@ -25,6 +25,9 @@
                 <tr>
                     <th>Audit Id</th>
                     <th>Affected User Id</th>
+                    <th>Affected User Forename</th>
+                    <th>Affected User Surname</th>
+                    <th>Affected User Email</th>
                     <th>Logged At</th>
                     <th>User Action</th>
                     <th></th>
