--- a/UserManagement.UI/Pages/UserList.razor
+++ b/UserManagement.UI/Pages/UserList.razor
@@ -28,6 +28,15 @@
         break;
     case UserListState.Empty:
         <p>No users found.</p>
+        @switch (currentForm)
+        {
+            case VisibleForm.None:
+                break;
+            case VisibleForm.CreateUser:
+                <CreateUserForm OnClose="CloseCreateUserModal" OnCreated="HandleUserCreated" />
+                break;
+        }
+
         break;
     case UserListState.Data:
         <table class="table table-hover">
