implemented searching on audit ui page

--- a/UserManagement.UI/Components/Forms/ViewAuditForm.razor
+++ b/UserManagement.UI/Components/Forms/ViewAuditForm.razor
@@ -12,22 +12,21 @@
                     <dt class="col-sm-4">ID:</dt>
                     <dd class="col-sm-8">@Audit.Id</dd>
 
-                    <dt class="col-sm-4">Forename:</dt>
-                    <dd class="col-sm-8">@Audit.UserForename</dd>
-
-                    <dt class="col-sm-4">Surname:</dt>
-                    <dd class="col-sm-8">@Audit.UserSurname</dd>
-
-                    <dt class="col-sm-4">Email:</dt>
-                    <dd class="col-sm-8">@Audit.UserEmail</dd>
-
-
                     <dt class="col-sm-4">Action Applied:</dt>
                     <dd class="col-sm-8">@Audit.Action</dd>
 
-
                     <dt class="col-sm-4">Affected User Id:</dt>
                     <dd class="col-sm-8">@Audit.UserId</dd>
+
+                    <dt class="col-sm-4">Affected User Forename:</dt>
+                    <dd class="col-sm-8">@Audit.UserForename</dd>
+
+                    <dt class="col-sm-4">Affected User Surname:</dt>
+                    <dd class="col-sm-8">@Audit.UserSurname</dd>
+
+                    <dt class="col-sm-4">Affected User Email:</dt>
+                    <dd class="col-sm-8">@Audit.UserEmail</dd>
+
 
                     <dt class="col-sm-4">Logged At:</dt>
                     <dd class="col-sm-8">@Audit.LoggedAt</dd>
