--- a/UserManagement.UI/Layout/MainLayout.razor
+++ b/UserManagement.UI/Layout/MainLayout.razor
@@ -1,16 +1,9 @@
 ﻿@inherits LayoutComponentBase
 <div class="page">
     <main>
-        <div class="top-row d-flex align-items-center justify-content-between px-4 py-2">
-            <div></div>
-
-            <a href="/" id="header-link">
-                <h1 style="margin: 0; text-align: center;">UMS</h1>
-            </a>
-
-            <a href="/audits" id="header-link">
-                <h4>Audit History</h4>
-            </a>
+        <div class="top-row d-flex align-items-center justify-content-center gap-5 px-4 py-3 border-bottom">
+            <a href="/" class="nav-link-header">User List</a>
+            <a href="/audits" class="nav-link-header">User History</a>
         </div>
         <article class="content px-4">
             @Body
