--- a/UserManagement.UI/Pages/AuditsList.razor
+++ b/UserManagement.UI/Pages/AuditsList.razor
@@ -6,7 +6,7 @@
 
 @inject IUserAuditApiService UserAuditService
 
-<h3>User Audits</h3>
+<h3>User History</h3>
 <UserAuditSearchBar SearchTerm="@AuditSearchTerm" SearchTermChanged="@((val) => AuditSearchTerm = val)"
     SelectedAuditAction="@SelectedAuditAction" SelectedAuditActionChanged="@((val) => SelectedAuditAction = val)"
     OnSearch="HandleAuditSearchChanged" />
