--- a/UserManagement.UI/Components/Forms/CreateUserForm.razor
+++ b/UserManagement.UI/Components/Forms/CreateUserForm.razor
@@ -58,7 +58,7 @@ these forms apply that -> But I felt the extraarchitecture was a bit unncessary 
                     </div>
 
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary disabled=" @IsCreating"">Create</button>
+                        <button type="submit" class="btn btn-primary disabled=" @IsCreating>Create</button>
                         <button type="button" class="btn btn-secondary" @onclick="Close">Cancel</button>
                     </div>
                 </EditForm>
