--- a/UserManagement.UI/Pages/UserList.razor
+++ b/UserManagement.UI/Pages/UserList.razor
@@ -12,7 +12,7 @@
 @inject IUserAuditApiService UserAuditApiService
 
 <h3>User List</h3>
-<UserSearchBar SearchTerm="@SearchTerm" SearchTermChanged="@((val) => SearchTerm = val)"
+<UserSearchBar SearchTerm="@SearchTerm" SearchTermChanged="@((string? val) =>  SearchTerm = val)"
     SelectedActiveOption="@SelectedActiveOption" SelectedActiveOptionChanged="@((val) => SelectedActiveOption = val)"
     OnSearch="HandleSearch" />
 <button class="btn btn-sm btn-success mb-3" @onclick="ShowCreateUserModal">Add User</button>
@@ -119,7 +119,7 @@
     private UserDto? SelectedEditUser;
 
     //User Search and pagination
-    private string SearchTerm = "";
+    private string? SearchTerm = "";
     private string SelectedActiveOption = "";
     private int CurrentPage = 1;
     private int PageSize = 10;
@@ -246,7 +246,7 @@
     //
     private async Task HandleSearch((string? searchTerm, bool? isActive) args)
     {
-        SearchTerm = args.searchTerm ?? "";
+        SearchTerm = args.searchTerm ?? ""; //will flip null searchTerm to ""
         SelectedActiveOption = args.isActive switch
         {
             true => "true",
